[gd_scene load_steps=35 format=2]

[ext_resource path="res://Characters/KobeSprites/Koby_hit.png" type="Texture" id=1]
[ext_resource path="res://Characters/KobeSprites/Koby_hurt.png" type="Texture" id=2]
[ext_resource path="res://Characters/KobeSprites/Koby_idle.png" type="Texture" id=3]
[ext_resource path="res://Characters/KobeSprites/Koby_parry.png" type="Texture" id=4]
[ext_resource path="res://Characters/KobeSprites/Koby_block.png" type="Texture" id=5]
[ext_resource path="res://Characters/KobeSprites/Koby_walk.png" type="Texture" id=6]
[ext_resource path="res://Characters/KobeSprites/StateMachineKobe.gd" type="Script" id=7]
[ext_resource path="res://Characters/KobeSprites/Koby.gd" type="Script" id=8]
[ext_resource path="res://Hitbox/Hitbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Characters/KobeSprites/AttackHitbox.gd" type="Script" id=10]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "Block",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Damage",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Parry",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=16]
resource_name = "Attack"
length = 0.416667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.216667, 0.333333, 0.366667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4, 1, 0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Block"
length = 0.0166667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Block" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Hit"
length = 0.0166667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Damage" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "Idle"
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.216667, 0.316667, 0.45, 0.516667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=20]
resource_name = "Parry"
length = 0.0166667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Parry" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=22]
resource_name = "walk"
length = 0.2
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 31.5, 67.125 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 36.5, 18.5 )

[node name="KOBE" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 8 )
hitbox = ExtResource( 9 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, -19 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Attack = SubResource( 16 )
anims/Block = SubResource( 17 )
anims/Hit = SubResource( 18 )
anims/Idle = SubResource( 19 )
anims/Parry = SubResource( 20 )
anims/RESET = SubResource( 21 )
anims/walk = SubResource( 22 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 9.5, 9.875 )
shape = SubResource( 23 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="GroundL" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 69 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 6

[node name="GroundR" type="RayCast2D" parent="Raycasts"]
position = Vector2( 35, 69 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 6

[node name="Ledge_Grab_F" type="RayCast2D" parent="Raycasts"]
position = Vector2( 11, 0 )
scale = Vector2( 3, 3 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 8

[node name="Ledge_Grab_B" type="RayCast2D" parent="Raycasts"]
position = Vector2( -13, 0 )
scale = Vector2( 3, 3 )
enabled = true
cast_to = Vector2( -11, 0 )
collision_mask = 8

[node name="Frames" type="Label" parent="."]
visible = false
margin_left = -14.0
margin_top = -62.0
margin_right = 26.0
margin_bottom = -48.0
text = "45"
align = 1

[node name="State" type="Label" parent="."]
visible = false
margin_left = -15.0
margin_top = -80.0
margin_right = 25.0
margin_bottom = -66.0
text = "Test"
align = 1

[node name="AttackHitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 65.5, -7.5 )
shape = SubResource( 24 )
script = ExtResource( 10 )
